--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=hr
+spring.datasource.password=hr
+server.port=8888
 
+hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
