--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password=hr
 server.port=8888
 
 hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
